[Bug 4660931] Fixed PseudoRandomVertexInputFormat to not generate negative destination vertices. Downgraded messages to debug from info, reduced message frequency.  Added Hadoop counters for vertices, finished vertices, and edges.  Fixed map functions (master and zookeeper are on the same map now).  Vertices now reactivate if a message is received.  GiraphJob.ZOOKEEPER_JAVA_OPTS parses multiple options properly.
git-svn-id: https://svn.apache.org/repos/asf/incubator/giraph/trunk@1161928 13f79535-47bb-0310-9956-ffa450edef68